tests/ui/spirv-attr/invalid-matrix-type.stderr
error: #[spirv(matrix)] type must have at least two fields
 --> $DIR/invalid-matrix-type.rs:7:1
  |
7 | pub struct _FewerFields {
  | ^^^^^^^^^^^^^^^^^^^^^^^

error: #[spirv(matrix)] type fields must all be vectors
  --> $DIR/invalid-matrix-type.rs:12:1
   |
12 | pub struct _NotVectorField {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: field type is f32

error: #[spirv(matrix)] type fields must all be the same type
  --> $DIR/invalid-matrix-type.rs:19:1
   |
19 | pub struct _DifferentType {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

